Fixed issue when on 27-inch monitors, padding becomes too large

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -40,7 +40,8 @@ a
     width: 100%;
     max-width: 880px;
     margin: 0 auto;
-    padding: 72px 8vw 24px;
+    /* padding: 72px 8vw 24px; */
+    padding: 72px 40px 24px;
     background: #fff;
     border-radius: 24px;
     background: #fff;
